# IntentLang

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md
.claude/memory/: MEMORY.md  architecture.md
.cursor/rules/: intentlang-syntax.mdc  project-conventions.mdc
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/workflows/: ci.yml  docker.yml  docs.yml  release.yml
crates/intent-check/: Cargo.toml  README.md
crates/intent-check/src/: check_tests.rs  constraints.rs  errors.rs  lib.rs  suggest.rs  types.rs
crates/intent-cli/: Cargo.toml  README.md
crates/intent-cli/src/: main.rs  suggest.rs
crates/intent-cli/tests/: beta_integration.rs
crates/intent-codegen/: Cargo.toml
crates/intent-codegen/src/: codegen_tests.rs  csharp.rs  go.rs  java.rs  lib.rs  openapi.rs  openapi_tests.rs  python.rs  rust.rs  rust_tests.rs  swift.rs  test_harness.rs  types.rs  typescript.rs
crates/intent-gen/: Cargo.toml  README.md
crates/intent-gen/src/: client.rs  lib.rs  prompt.rs  validate.rs
crates/intent-implement/: Cargo.toml
crates/intent-implement/src/: context.rs  lib.rs  prompt.rs  validate.rs
crates/intent-ir/: Cargo.toml  README.md
crates/intent-ir/src/: audit.rs  audit_tests.rs  diff.rs  diff_tests.rs  incremental.rs  incremental_tests.rs  lib.rs  lock.rs  lock_tests.rs  lower.rs  lower_tests.rs  types.rs  verify.rs  verify_tests.rs
crates/intent-lsp/: Cargo.toml
crates/intent-lsp/src/: completion.rs  diagnostics.rs  document.rs  hover.rs  main.rs  navigation.rs  server.rs  tests.rs
crates/intent-parser/: Cargo.toml  README.md
crates/intent-parser/src/: ast.rs  intent.pest  lib.rs  parser.rs  resolve.rs  snapshot_tests.rs
crates/intent-parser/src/snapshots/: intent_parser__snapshot_tests__all_types.snap  intent_parser__snapshot_tests__auth.snap  intent_parser__snapshot_tests__entity_only.snap  intent_parser__snapshot_tests__full_action.snap  intent_parser__snapshot_tests__minimal.snap  intent_parser__snapshot_tests__shopping_cart.snap  intent_parser__snapshot_tests__transfer.snap
crates/intent-render/: Cargo.toml  README.md
crates/intent-render/src/: format.rs  html.rs  lib.rs  markdown.rs
crates/intent-runtime/: Cargo.toml
crates/intent-runtime/src/: contract.rs  error.rs  eval.rs  lib.rs  server.rs  test_runner.rs  value.rs
docs/: SPEC.md  book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/architecture/: crates.md  four-layers.md  three-layers.md
docs/src/cli/: agent-tools.md  check.md  compile.md  completions.md  editor.md  generate.md  init.md  render.md  serve.md  usage.md  verify.md
docs/src/examples/: auth.md  shopping-cart.md  transfer.md
docs/src/getting-started/: first-spec.md  installation.md
docs/src/reference/: actions.md  edge-cases.md  entities.md  expressions.md  invariants.md  modules.md  state-machines.md  types.md
docs/theme/: custom.css
editors/vscode/: language-configuration.json  package-lock.json  package.json
editors/vscode/snippets/: intent.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: intent.tmLanguage.json
examples/: api_gateway.intent  auth.intent  data_pipeline.intent  rbac.intent  shopping_cart.intent  task_states.intent  transfer.intent
examples/beta/: Core.intent  Projects.intent  Tracking.intent
examples/multi_module/: Types.intent  banking.intent
getting-started/: README.md
getting-started/01-hello-intent/: README.md  hello.intent  hello.ir.json
getting-started/02-contracts/: README.md  counter.intent  counter.ir.json
getting-started/03-types-and-collections/: README.md  inventory.intent  inventory.ir.json
getting-started/04-invariants-and-edges/: README.md  voting.intent  voting.ir.json
getting-started/05-ir-and-verification/: README.md  task_tracker.intent  task_tracker.ir.json
getting-started/06-audit-and-coverage/: README.md  user_service.intent  user_service.ir.json
getting-started/07-multi-agent/: README.md  deployment.intent  deployment.ir.json
getting-started/08-real-world-ecommerce/: README.md  catalog.intent  catalog.ir.json  orders.intent  orders.ir.json  payments.intent  payments.ir.json
getting-started/09-real-world-healthcare/: README.md  appointments.intent  appointments.ir.json  patient_records.intent  patient_records.ir.json
grammar/: intent.pest
tests/invalid/: bad_quantifier_type.intent  bad_type.intent  duplicate_action.intent  duplicate_entity.intent  duplicate_field.intent  missing_module.intent  old_in_requires.intent  tautological_comparison.intent  unclosed_brace.intent  undefined_edge_action.intent  undefined_type.intent  unknown_field.intent
tests/valid/: all_types.intent  entity_only.intent  full_action.intent  minimal.intent
