[workspace]
resolver = "2"
members = [
    "crates/intent-parser",
    "crates/intent-check",
    "crates/intent-render",
    "crates/intent-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
pest = "2"
pest_derive = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
