[workspace]
resolver = "2"
members = [
    "crates/intent-parser",
    "crates/intent-check",
    "crates/intent-render",
    "crates/intent-ir",
    "crates/intent-gen",
    "crates/intent-runtime",
    "crates/intent-cli",
]

[workspace.package]
version = "0.4.0-alpha.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/krakenhavoc/IntentLang"
homepage = "https://github.com/krakenhavoc/IntentLang"
documentation = "https://krakenhavoc.github.io/IntentLang/"
keywords = ["specification", "formal-verification", "design-by-contract", "parser", "dsl"]
categories = ["compilers", "development-tools", "parser-implementations"]

[workspace.dependencies]
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
pest = "2"
pest_derive = "2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
