[package]
name = "intent-check"
description = "Semantic analyzer and type checker for IntentLang specifications"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
intent-parser = { path = "../intent-parser" }
miette.workspace = true
thiserror.workspace = true
