[package]
name = "intent-cli"
description = "CLI toolchain for IntentLang: check, render, compile, verify, audit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "intent"
path = "src/main.rs"

[dependencies]
intent-parser = { path = "../intent-parser" }
intent-check = { path = "../intent-check" }
intent-render = { path = "../intent-render" }
intent-ir = { path = "../intent-ir" }
serde_json.workspace = true
clap.workspace = true
miette = { workspace = true, features = ["fancy"] }
