[package]
name = "intent-cli"
description = "CLI toolchain for IntentLang: check, render, compile, verify, audit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "intent"
path = "src/main.rs"

[dependencies]
intent-parser = { path = "../intent-parser", version = "0.1.0" }
intent-check = { path = "../intent-check", version = "0.1.0" }
intent-render = { path = "../intent-render", version = "0.1.0" }
intent-ir = { path = "../intent-ir", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
miette = { workspace = true, features = ["fancy"] }
