[package]
name = "intent-cli"
description = "CLI toolchain for IntentLang: check, render, compile, verify, audit, query, lock, fmt, generate, init"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[[bin]]
name = "intent"
path = "src/main.rs"

[dependencies]
intent-parser = { path = "../intent-parser", version = "0.6.0-beta.1" }
intent-check = { path = "../intent-check", version = "0.6.0-beta.1" }
intent-render = { path = "../intent-render", version = "0.6.0-beta.1" }
intent-ir = { path = "../intent-ir", version = "0.6.0-beta.1" }
intent-gen = { path = "../intent-gen", version = "0.6.0-beta.1" }
intent-runtime = { path = "../intent-runtime", version = "0.6.0-beta.1" }
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
clap_complete = "4"
miette = { workspace = true, features = ["fancy"] }
similar = "2"
