[package]
name = "intent-ir"
description = "Agent IR lowering, verification, and audit bridge for IntentLang"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
intent-parser = { path = "../intent-parser" }
serde.workspace = true
