[package]
name = "intent-ir"
description = "Agent IR lowering, verification, and audit bridge for IntentLang"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
intent-parser = { path = "../intent-parser", version = "0.4.0-alpha.1" }
serde.workspace = true
serde_json.workspace = true
