[package]
name = "intent-parser"
description = "PEG parser and typed AST for the IntentLang specification language"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
pest.workspace = true
pest_derive.workspace = true
miette.workspace = true
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
insta = { version = "1", features = ["json"] }
