[package]
name = "intent-runtime"
description = "Expression evaluator and stateless runtime for IntentLang specifications"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["server"]
server = ["tiny_http"]

[dependencies]
intent-ir = { path = "../intent-ir", version = "0.6.0-beta.1" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tiny_http = { version = "0.12", optional = true }

[dev-dependencies]
intent-parser = { path = "../intent-parser", version = "0.6.0-beta.1" }
